--- a/css/main.css
+++ b/css/main.css
@@ -6,32 +6,132 @@ html, body {
     height: 100%;
 }
 body {
+    margin: 0;
+    min-width: 640px;
+    font: 18px/18px sans-serif;
+    background: #f1f5f7;
+}
+.wrapper {
+    width: 640px;
+    height: 100%;
+    min-height: 480px;
+    margin: 0 auto;
+    padding: 20px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 0;
-    min-width: 600px;
-    font: 18px/18px sans-serif;
+}
+h1 {
+    flex: 0 0 18px;
+    white-space: nowrap;
+    text-align: center;
+    color: #B3C1C8;
+    font-size: 35px;
 }
 .form {
-    width: 600px;
-    margin: 0 auto;
-    overflow: hidden;
-}
-.form__cols {
+    width: 100%;
     display: flex;
+    flex: 0 0 120px;
 }
 .form__label {
     flex: 1 0 0;
-    padding: 0 20px 0 0;
+    margin: 10px;
 }
 .form__textarea {
     display: block;
     width: 100%;
-
-    margin: 10px 0;
+    height: 100px;
+    margin: 0;
+    padding: 2px 5px;
     resize: none;
+    border: 1px solid;
+    border-color: #cdcdcd #b7b7b7 #afafaf;
+    border-radius: 3px;
+    overflow: auto;
 }
-.form__submit {
+.form__textarea:focus {
+    border-color: #85b7ce;
+    box-shadow: none;
+}
+.settings {
+    flex: 0 0 23px;
+    margin: 0 0 10px;
+    text-align: center;
+}
+.settings__checkbox {
+    display: none;
+}
+.settings__label {
+    display: inline-block;
+    background: #ccc;
+    padding: 2px 10px;
+    font-size: 12px;
+    cursor: pointer;
+    color: #fff;
+}
+.settings__label:hover { background: #9ad1ec; }
+.settings__checkbox:checked + .settings__label { background: #83B4CF; }
+.settings__checkbox:checked + .settings__label:hover { background: #9bbcce; }
 
+
+#settings__checkbox_equal + .settings__label:hover { background: #abeb70; }
+#settings__checkbox_equal:checked + .settings__label { background: #98e156; }
+#settings__checkbox_equal:checked + .settings__label:hover { background: #b4d993; }
+
+#settings__checkbox_diff + .settings__label:hover { background: #de6767; }
+#settings__checkbox_diff:checked + .settings__label { background: #f75a5a; }
+#settings__checkbox_diff:checked + .settings__label:hover { background: #e88686; }
+
+.result {
+    flex: 5 0 0;
+    width: 100%;
+    overflow-y: auto;
+    font-size: 14px;
+    line-height: 18px;
+}
+.result__item {
+    background: #fff;
+    display: flex;
+}
+.result__item-left, .result__item-right {
+    display: flex;
+    flex: 1 0 0;
+    padding: 8px 10px;
+    border-top: 1px solid #eee;
+}
+.result__item-left {
+    border-left: 10px solid #eee;
+}
+.result__item-right {
+    border-right: 10px solid #eee;
+}
+.result__item-unique {
+    border-color: #83B4CF;
+}
+.result__item_equal > .result__item-block {
+    border-color: #98e156;
+}
+.result__item_diff > .result__item-block {
+    border-color: #f75a5a;
+}
+.result__item-unique:hover {
+    background: #e7f6ff;
+}
+.result__item_equal:hover > .result__item-block {
+    background: #f0ffe3;
+}
+.result__item_diff:hover > .result__item-block {
+    background: #ffefef;
+}
+.result__item-name, .result__item-value {
+    padding: 0 10px 0 0;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+.result__item-name {
+    flex: 1 0 0;
+}
+.result__item-value {
+    flex: 2 0 0;
 }
